# repatch

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  app.doql.less  deps.json  goal.yaml  index.html  koru.yaml  local.dev.txt  pyproject.toml  tree.txt  wup.yaml
.cursor/: mcp.json
.koru/: event-store.jsonl  history.jsonl  onboarding.json
.koru/events/: observability.jsonl
.nlp2dsl/: environment.doql.less
.nlp2dsl/registry/: environment.doql.less
.planfile/: config.yaml
.planfile/.koru/operator-steps/: mcp_koru.ticket  self_control.ticket
.planfile/sprints/: current.yaml  current.yaml.fast.json
TODO/: 1.md
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
repatch/: __init__.py  css.py  dom_patch.py  marked_context.py  options.py  organize_html.py  project_ir.py  scope.py  service.py  spatial.py  ui_patch.py  web_fetch.py  web_preprocess.py
repatch/marked_context/: __init__.py  _context.py  _html.py  _ids.py  _scope_css.py  _selectors.py
sdks/js/: repatch-sdk.js
sdks/python/: repatch_sdk.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_dom_patch.py  test_marked_context.py  test_marked_context_regression.py  test_options.py  test_organize_html.py  test_service.py  test_spatial.py  test_ui_patch.py  test_web_fetch.py  test_web_preprocess.py
