[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repatch"
version = "0.1.0"
description = "Simple scope-based HTML/CSS/JS patch suggestion package using LiteLLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["litellm>=1.40.0"]

[tool.setuptools]
packages = ["repatch"]
